fix css and remove dark mode

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -130,7 +130,7 @@ a {
 .profiles2 {
   padding-top: 40px;
   width:500px;
-  height:675px;
+  height:720px;
   margin: 90px;
   background-color: #e6b687;
   justify-content: center;
